made a no wrestler message on the r

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
 <div class="authform">
   <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
     <h3>Change your password</h3>
@@ -9,6 +12,9 @@
       <%= f.label :password_confirmation, 'Confirm new password' %>
         <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
     </div>
-     <%= f.submit 'Change my Password', :class => 'button right' %>
+     <%= f.submit 'Change my Password', class: 'btn btn-large btn-primary' %>
   <% end %>
+</div>
+</div>
+</div>
 </div>
