--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,17 +37,33 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<p>Copyright &copy; Cream of the Crop 2015</p>
-					<p>Image attribution for the picture of <%= link_to 'Macho Man Randy Savage', ("https://c2.staticflickr.com/4/3943/15400899809_b0fc02fcbd_b.jpg") %> goes to <%=link_to 'Alan Teo', ("https://www.flickr.com/photos/alanosaur/15400899809/")  %> over at Flickr.  </p>
-					<p>Image attribution for the picture of <%= link_to 'Macho Man and Miss Elizabeth', ("http://orig10
+					<p>Image attribution for the picture of <%= link_to 'Macho Man Randy Savage', ("https://c2.staticflickr
+					.com/4/3943/15400899809_b0fc02fcbd_b.jpg") %> goes to <%=link_to 'Alan Teo', ("https://www.flickr
+					.com/photos/alanosaur/15400899809/")  %> over at Flickr.<br>
+					Image attribution for the picture of <%= link_to 'Macho Man and Miss Elizabeth', ("http://orig10
 					.deviantart.net/38c4/f/2011/142/4/c/rest_in_peace_macho_man_by_jermainedivine-d3gzg4c.jpg") %> goes to
 						<%=link_to 'Jermaine Divine', ("http://jermainedivine.deviantart.com/art/Rest-In-Peace-Macho-Man-209926236")  %> over at Deviant
-						art.</p>
-					<p>Would you like to learn more <%= link_to 'About', page_path('about') %> Cream of the Crop and its
-						author?</p>c
+						art.<br>
+					Copyright &copy; Michael E. Nash (許書聖） 2015 <br>
+					Would you like to learn more <%= link_to 'About', page_path('about') %> Cream of the Crop and its
+						author?</p>
 				</div>
 			</div>
 		</div>
 	</footer>
   </body>
 </html>
+
+<!-- Copyright 2013-2015 Iron Summit Media Strategies, LLC
+-
+-   Licensed under the Apache License, Version 2.0 (the "License");
+-   you may not use this file except in compliance with the License.
+-   You may obtain a copy of the License at
+-
+-       http://www.apache.org/licenses/LICENSE-2.0
+-
+-   Unless required by applicable law or agreed to in writing, software
+-   distributed under the License is distributed on an "AS IS" BASIS,
+-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+-   See the License for the specific language governing permissions and
+-   limitations under the License.-->
