--- a/app/views/wrestlers/edit.html.erb
+++ b/app/views/wrestlers/edit.html.erb
@@ -4,8 +4,8 @@
 <h1>Editing Wrestler</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @wrestler, class: "btn btn-large btn-info" %> |
+			<br>
+<%= link_to 'Show', @wrestler, class: "btn btn-large btn-info" %> <br> <br>
 <%= link_to 'Back', wrestlers_path, class: "btn btn-large btn-danger	" %>
 		</div>
 	</div
