--- a/app/views/wrestlers/show.html.erb
+++ b/app/views/wrestlers/show.html.erb
@@ -26,5 +26,6 @@
 </p>
 <h5>Promoter: <%=@wrestler.user.name  %></h5>
 
-<%= link_to 'Edit', edit_wrestler_path(@wrestler) %> |
+<%= link_to 'Edit', edit_wrestler_path(@wrestler) %> <br>
+
 <%= link_to 'Back', wrestlers_path %>
