--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
 <div class="authform">
   <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
     <h3>Forgot your password?</h3>
@@ -10,3 +13,7 @@
      <%= f.submit 'Reset Password', :class => 'button right' %>
   <% end %>
 </div>
+</div>
+</div>
+</div>
+
