--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,7 +2,7 @@
 <li><%= link_to 'Home', root_path %></li>
 <% if user_signed_in? %>
 	<li><%= link_to 'Roster Page', wrestlers_path %></li>
-		<li><%= link_to 'New Match', cards_path %></li>
+		<li><%= link_to 'Generate Card!', cards_path %></li>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
