wrote the home page

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -50,15 +50,37 @@
 		<div class="box">
 			<div class="col-lg-12">
 				<hr>
-				<h2 class="intro-text text-center">Build a website
-					<strong>worth visiting</strong>
+				<h2 class="intro-text text-center">Nothing means
+					<strong>nothing</strong>
 				</h2>
 				<hr>
 				<%= image_tag "intro-pic.jpg", class: "img-responsive img-border img-left"  %>
 				<hr class="visible-xs">
 				<p>This is an app about dead wrestlers. </p>
-				<p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+				<p>Are you running into trouble keeping all the storylines in your wrestling promotion straight? Do you find
+					yourself dropping feuds in the middle of a a story arc because you forgot about some of the moving pieces?
+					Do you dread having to rearrange your entire schedule when one of your wrestlers gets injured? Are you
+					looking for a web-based tool to keep track of the complex systems of stories that exist within a wrestling
+					promotion?
+				</p>
+				<p>Well, <strong>look no further!</strong> With the <i>Cream of the Crop</i> app, our system does all of
+					that work for you. Sign up, sign in, authenticate with Google so you don't have to remember your password.
+					Simply enter the relevant
+					information about your
+					wrestlers	on the
+					Roster Page. Once you
+					have your roster, you can click on the Generate Card! link to set up a list of matches for your next show,
+					randomly generated. (These are the only actual features available. The following are features the author is
+					working on). Create feuds between wrestlers, set up the schedule for your shows, and generate cards months
+					out of your schedule. </p>
+				<p>Lack of attention to plot detail is one of the greatest problems plauging modern American Pro Wrestling.
+					Famous Wrestling journalist Brandon Stroud of <%= link_to 'Uproxx', 'http://uproxx
+					.com/topic/best-and-worst-of-raw/' %> complains about that very thing more or less every week.
+				</p>
+				<p>
+					So remember: Amongst wrestling scheduling apps, our is the <strong>Cream of the Crop</strong>.
+				</p>
+
 			</div>
 		</div>
 	</div>
