wrote show wrestler page

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -78,7 +78,7 @@
 					.com/topic/best-and-worst-of-raw/' %> complains about that very thing more or less every week.
 				</p>
 				<p>
-					So remember: Amongst wrestling scheduling apps, our is the <strong>Cream of the Crop</strong>.
+					So remember: Amongst wrestling scheduling apps, ours is the <strong>Cream of the Crop</strong>.
 				</p>
 
 			</div>
