--- a/app/views/wrestlers/show.html.erb
+++ b/app/views/wrestlers/show.html.erb
@@ -1,31 +1,49 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @wrestler.name %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= image_tag @wrestler.image.url %>
-</p>
-
-<p>
-  <strong>Alignment:</strong>
-  <%= @wrestler.alignment %>
-</p>
-
-<p>
-  <strong>Position:</strong>
-  <%= @wrestler.position %>
-</p>
-
-<p>
-  <strong>Injured?:</strong>
-  <%= @wrestler.injured? %>
-</p>
-<h5>Promoter: <%=@wrestler.user.name  %></h5>
-
-<%= link_to 'Edit', edit_wrestler_path(@wrestler) %> <br>
-
-<%= link_to 'Back', wrestlers_path %>
+<div class="container">
+	<div class="row">
+		<div class="box">
+			<div class="col-lg-12">
+				<hr>
+				<h2 class="intro-text text-center">
+					<%=@wrestler.name %>
+				</h2>
+				<hr>
+				<%= image_tag @wrestler.image.url, class: "img-responsive img-border img-left"  %>
+				<hr class="visible-xs">
+				  <p>
+						<%if @wrestler.alignment == true  %>
+							This wrestler is a Babyface (Tecnico).
+						<%else  %>
+							This wrestler is a Heel (Rudo).
+						<%end  %>
+					</p>
+					<p>
+						<%if @wrestler.position == 5  %>
+							This wrestler currently performs in the Main Event.
+						<%elsif @wrestler.position == 4  %>
+							This wrestler currently performs in the High Card.
+						<%elsif @wrestler.position == 3  %>
+							This wrestler currently performs in the Mid Card.
+						<%elsif @wrestler.position == 2  %>
+							This wrestler currently performs in the Low Card.
+						<%else  %>
+							This wrestler currently performs in the Undercard.
+						<%end  %>
+					</p>
+					<p>
+						<%if @wrestler.injured  %>
+							This wrestler is injured and cannot currently compete.
+						<%end  %>
+					</p>
+					<p>
+						This wrestler is currently performing in the <%=@wrestler.user.promotion  %> promotion under owner <%=
+							@wrestler.user.name %>.
+					</p>
+					<p><%= link_to 'Change Wrestler Profile', edit_wrestler_path(@wrestler), class: "btn btn-large btn-info" %>
+						<br>
+					</p>
+					<p><%= link_to 'Back', wrestlers_path, class: "btn btn-large btn-danger" %>
+					</p>
+			</div>
+		</div>
+	</div>
+</div>
