--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,17 +1,43 @@
+<div class="containter">
 <div class="row">
 	<div class="box">
 		<div class="col-lg-12">
-			<h1>Your card is:</h1>
+			<h1 class="text-center">Your card is:</h1>
+			</div>
+		</div>
+	</div>
+
 			<% index = 8 %>
 			<% @card.matches.each do |match|  %>
+			<div class="row">
+				<div class="box">
+					<div class="col-lg-12">
 				<%unless match.heel.blank? || match.babyface.blank?  %>
-	  		<h2> <%= index %>. <%=match.heel.name  %> vs. <%=match.babyface.name  %></h2>
+							<h3 class ="intro-text text-center"><u>Match <%= index %></u> </h3>
+							<div class="col-sm-4 text-left">
+								<h4 class="intro-text"><u><%=match.babyface.name %></u></h4>
+								<br><br><br><br>
+								<%=image_tag match.babyface.image.url, class: "img-responsive"  %>
+							</div>
+							<div class="col-sm-4 text-center">
+								<br>
+								<br>
+								<br>
+								<br>
+								<h2>VS.</h2>
+							</div
+							<div class="col-sm-4 text-right">
+								<h4 class="intro-text"><u><%=match.heel.name %></u></h4>
+								<br><br><br><br>
+								<%=image_tag match.heel.image.url, class: "img-responsive"  %>
+							</div>
 					<%else  %>
 							<h2>Youd do not have enough wrestlers to have a match at position <%=index  %>. Hire a new wrestler,
 								turn a face heel, or turn a heel face</h2>
 					<%end  %>
 				<%index -= 1  %>
+					</div>
+				</div>
+			</div>
 			<%end %>
-		</div>
-	</div>
 </div>
