fixed a few minor html issues

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -25,7 +25,7 @@
 								<br>
 								<br>
 								<h2>VS.</h2>
-							</div
+							</div>
 							<div class="col-sm-4 text-right">
 								<h4 class="intro-text"><u><%=match.heel.name %></u></h4>
 								<br><br><br><br>
