--- a/app/assets/stylesheets/business-casual.css
+++ b/app/assets/stylesheets/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url(bg.jpg);
+    background: image-url('bg.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
